# niki

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  MILESTONES.md  NIKI 虚拟机设计指北.md  readme.md  vcpkg-configuration.json  vcpkg.json  一些碎碎念.md
docs/: diagnostic_conventions.md  project_health_p0_audit.md
include/: scanner.hpp  token.hpp
include/niki/debug/: diagnostic_logger.hpp  disassembler.hpp  logger.hpp
include/niki/diagnostic/: codes.hpp  diagnostic.hpp  renderer.hpp
include/niki/driver/: driver.hpp
include/niki/l0_core/: note.md  readme.md
include/niki/l0_core/diagnostic/: codes.hpp  diagnostic.hpp  readme.md  renderer.hpp
include/niki/l0_core/ir/: module_ir.hpp  readme.md  verify.hpp
include/niki/l0_core/linker/: linker.hpp  readme.md
include/niki/l0_core/runtime/: launcher.hpp  readme.md
include/niki/l0_core/semantic/: global_compilation.hpp  global_symbol_table.hpp  global_type_arena.hpp  module_semantic.hpp  readme.md  type_checker.hpp
include/niki/l0_core/syntax/: ast.hpp  ast_payloads.hpp  compiler.hpp  parser.hpp  parser_precedence.hpp  readme.md  scanner.hpp  token.hpp
include/niki/l0_core/vm/: chunk.hpp  object.hpp  readme.md  value.hpp  vm.hpp
include/niki/linker/: linker.hpp
include/niki/runtime/: launcher.hpp
include/niki/semantic/: global_compilation.hpp  global_symbol_table.hpp  global_type_arena.hpp  nktype.hpp  type_checker.hpp
include/niki/syntax/: ast.hpp  ast_payloads.hpp  compiler.hpp  global_interner.hpp  parser.hpp  parser_precedence.hpp  scanner.hpp  token.hpp
include/niki/vm/: chunk.hpp  object.hpp  opcode.hpp  value.hpp  vm.hpp
scripts/: all_syntax_ok.nk  init_only.nk  main.nk  test.nk
scripts/cases/: README.md
scripts/cases/fail/link_01_no_entry/: 00_lib.nk
scripts/cases/fail/link_02_multiple_entry/: 00_main_a.nk  10_main_b.nk
scripts/cases/fail/link_03_id_conflict/: 00_alpha.nk  10_beta.nk
scripts/cases/fail/runtime_01_init_error/: 10_main.nk
scripts/cases/fail/runtime_02_entry_error/: 00_main.nk
scripts/cases/fail/semantic_01_cross_file_call/: 00_math.nk  10_main.nk
scripts/cases/success/01_multi_file_basic/: 00_init.nk  10_main.nk
scripts/cases/success/02_init_order/: 00_lib.nk  10_main.nk
scripts/cases/success/03_multi_decl_stable/: 00_math.nk  05_types.nk  20_main.nk
scripts/cases/success/04_dice_basic/: 10_main.nk
src/: main.cpp  scanner.cpp
src/debug/: diagnostic_logger.cpp  disassembler.cpp  disassembler.hpp  logger.cpp
src/diagnostic/: diagnostic.cpp  renderer.cpp
src/driver/: driver.cpp
src/l0_core/diagnostic/: diagnostic.cpp  renderer.cpp
src/l0_core/ir/: verify.cpp
src/l0_core/linker/: linker.cpp
src/l0_core/runtime/: launcher.cpp
src/l0_core/semantic/: global_symbol_table.cpp  global_type_arena.cpp  type_checker.cpp  type_checker_decl.cpp  type_checker_expr.cpp  type_checker_pre_decl.cpp  type_checker_stmt.cpp
src/l0_core/syntax/: ast.cpp  compiler.cpp  compiler_declaration.cpp  compiler_expression.cpp  compiler_pre_decl.cpp  compiler_statement.cpp  global_interner.cpp  parse.cpp  parser_declaration.cpp  parser_expression.cpp  parser_statement.cpp  scanner.cpp
src/l0_core/vm/: vm.cpp
src/linker/: linker.cpp
src/runtime/: launcher.cpp
src/semantic/: global_symbol_table.cpp  global_type_arena.cpp  type_checker.cpp  type_checker_decl.cpp  type_checker_expr.cpp  type_checker_pre_decl.cpp  type_checker_stmt.cpp
src/syntax/: ast.cpp  compiler.cpp  compiler_declaration.cpp  compiler_expression.cpp  compiler_pre_decl.cpp  compiler_statement.cpp  global_interner.cpp  parse.cpp  parser_declaration.cpp  parser_expression.cpp  parser_statement.cpp  scanner.cpp
src/vm/: vm.cpp
test/: env_test.hpp  scanner_test.cpp
test/diagnostic/: diagnostic_test.cpp
test/driver/: driver_project_test.cpp
test/linker/: linker_test.cpp
test/runtime/: launcher_test.cpp
test/syntax/: ast_printer.hpp  compiler.cpp  compiler_test.cpp  parser_statement.cpp  parser_test.cpp  scanner_test.cpp
